todo-api/api-deployment-gcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: todo-app
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: todo-api
          imagePullPolicy: Always
          image: gcr.io/todo-app-339413/todo-api:v1.0
          ports:
            - containerPort: 5500
          readinessProbe:
            httpGet:
              path: /tasks
              port: 5500
            initialDelaySeconds: 15
            periodSeconds: 5
