todo-api/api-nodeport.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: api-nodeport
  namespace: todo-app
spec: 
  type: NodePort 
  selector: 
    app: api
  ports: 
  # By convention `targetPort` has same value as `port`
  - port: 5500 
    targetPort: 80 # Optional field # By default k8s allocates a port from 30000-32767 
    nodePort: 30007
