todo-api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-loadbalancer
  namespace: todo-app
spec:
  type: LoadBalancer
  ports:
    - port: 5050
      targetPort: 5500
  selector:
    app: api
