todo-api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api-ingress
  namespace: todo-app
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
  - hosts:
    - api.group3.site
    secretName: api-cloudflare-tls
  rules:
    - host: api.group3.site
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-loadbalancer
              port: 
                number: 5050
